tests/errors/bundle/bundle-delay.expect
---CODE---
1
---STDERR---
error: bundle's availability is greater than the delay of the event
  ┌─ tests/errors/bundle-delay.fil:2:18
  │
1 │ comp Bar[P, K]<'G:1>(
  │                   - event's delay
2 │    in[K]: for<j> ['G+j, 'G+K] 16,
  │               -  ^^^^^^^^^^^^ available for K-j cycles
  │               │   
  │               takes values in [0, K)

error: interval's end must be strictly greater than the start
  ┌─ tests/errors/bundle-delay.fil:6:27
  │
6 │     bundle f[P+1]: for<k> ['G+k, 'G+P] 16;
  │                           ^^^^^^^^^^^^ interval's end `'G+P' is not strictly greater than the start `'G+k

error: bundle's availability is greater than the delay of the event
  ┌─ tests/errors/bundle-delay.fil:6:27
  │
1 │ comp Bar[P, K]<'G:1>(
  │                   - event's delay
  ·
6 │     bundle f[P+1]: for<k> ['G+k, 'G+P] 16;
  │                        -  ^^^^^^^^^^^^ available for P-k cycles
  │                        │   
  │                        takes values in [0, P+1)

Compilation failed with 3 errors.
Run with --show-models to generate assignments for failing constraints.
